--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "site",
+  "name": "frontendmasters-gatsby",
   "private": true,
+  "description": "Bare-bones starter for the Gatsby Frontend Masters workshop.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -9,18 +10,39 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --project ."
   },
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "@mdx-js/mdx": "^1.6.5",
+    "@mdx-js/react": "^1.6.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "gatsby": "^2.18.6",
+    "gatsby-mdx": "^1.0.0",
+    "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-tslint": "0.0.2",
+    "gatsby-plugin-typescript": "^2.4.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-plugin-prettier": "^2.3.0",
+    "tslint-react": "^5.0.0",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
     "prettier": "^1.19.1"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/jlengstorf/frontendmasters-gatsby"
   }
 }
