--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby": "^2.18.6",
     "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-mdx": "^1.2.14",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "gatsby-plugin-tslint": "0.0.2",
     "gatsby-plugin-typescript": "^2.4.4",
