--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontendmasters-gatsby",
+  "name": "gatsby",
   "private": true,
   "description": "Bare-bones starter for the Gatsby Frontend Masters workshop.",
   "version": "0.1.0",
@@ -22,13 +22,17 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "gatsby": "^2.18.6",
+    "gatsby-background-image": "^1.1.1",
+    "gatsby-image": "^2.4.6",
     "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.16",
     "gatsby-plugin-mdx": "^1.2.14",
     "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-sharp": "^2.6.10",
     "gatsby-plugin-tslint": "0.0.2",
     "gatsby-plugin-typescript": "^2.4.4",
     "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-transformer-sharp": "^2.5.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
