--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
   "name": "gatsby",
   "private": true,
-  "description": "Bare-bones starter for the Gatsby Frontend Masters workshop.",
+  "description": "Bare-bones starter for the Gatsby",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "type-check": "tsc --noEmit",
-    "lint": "tslint --project ."
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
-    "@mdx-js/mdx": "^1.6.5",
-    "@mdx-js/react": "^1.6.5",
+    "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^1.5.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "gatsby": "^2.18.6",
-    "gatsby-background-image": "^1.1.1",
-    "gatsby-image": "^2.4.6",
-    "gatsby-mdx": "^1.0.0",
+    "gatsby-background-image": "^0.9.11",
+    "gatsby-image": "^2.2.34",
     "gatsby-plugin-emotion": "^4.1.16",
-    "gatsby-plugin-mdx": "^1.2.14",
-    "gatsby-plugin-react-helmet": "^3.3.3",
-    "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-plugin-mdx": "^1.0.59",
+    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-tslint": "0.0.2",
     "gatsby-plugin-typescript": "^2.4.4",
-    "gatsby-source-filesystem": "^2.3.10",
-    "gatsby-transformer-sharp": "^2.5.4",
+    "gatsby-remark-images": "^3.1.35",
+    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-transformer-sharp": "^2.3.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
@@ -44,7 +42,6 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "cross-env": "^6.0.3",
     "prettier": "^1.19.1"
   },
   "repository": {
